
About the file downloads
------------------------
The file download from Sourceforge includes the following:
 * The Win32++ library itself
 * Help for the library
 * A set of tutorials
 * A collection of sample applications

The sample applications include:
 * Browser - An Internet browser application with an event sink.
 * CommonDialogs - a Demo of windows common dialogs, such as File/Save
 * CustomControl - Shows how to put a web browser in a custom control for use in a dialog.
 * DateTime - A demo of a Date/time dialog for displaying and changing the time
 * DDXDemo - Demonstrates Dialog Data Exchange and validation. 
 * Dialog - An example of a simple dialog application.
 * DialogDemo - An interactive dialog application demonstrating slider controls and progress bars.
 * DialogResizing - An example of a resizable dialog.
 * DialogTab - A dialog application with a tab control.
 * DirectX9 - A simple DirectX application.
 * DirectX11 - A simple DirectX application using DirectX 11.
 * DLL - Shows how to run Win32++ from within a DLL
 * Dock - An example of a simple docking application.
 * DockContainer - An example of a docking application which incorporates containers.
 * DockTabbedMDI - An example of a docking application with containers and a tabbed MDI.
 * DoubleBuffer - Demonstrates how to implement double buffering for window drawing.
 * Explorer - A Windows Explorer-like application.
 * FastGDI - An application which demonstrates direct manipulation of a bitmap's colour.
 * FormDocView - An example of a modeless dialog within a frame. Uses Doc/View architecture.
 * Frame - A simple frame application that stores settings in the registry.
 * GDIPlus - Demonstrates how to use GDI+ with Win32++.
 * INIFrame - A simple frame application that stores settings in an INI file.
 * MDIDockFrame - Combines docking with a MDI frame.
 * MDIFrame - A simple MDI frame application.
 * MDIFrameDemo - Demonstrates some additional features of MDI frames.